--- a/about.html
+++ b/about.html
@@ -83,6 +83,7 @@
 						<div class="icon mt-2 mr-2 d-flex justify-content-center align-items-center"><span class="flaticon-jigsaw"></span></div>
 						<div class="text">
 							<a href="products.html"><h2>渠道拓展</h2></a>
+							<a href="products/mobile/mobile.html"><h5>Alibaba.com国际站</h5></a>
 							<a href="products/mobile/mobile.html"><h5>智能手机</h5></a>
 							<a href="products/network/network.html"><h5>网络设备</h5></a>
 							<a href="products/security/security.html"><h5>安保设备</h5></a>
@@ -99,6 +100,7 @@
 							<a href="ittech/cloud/cloud.html"><h5>云技术解决方案</h5></a>
 							<a href="ittech/network/network.html"><h5>企业网络解决方案</h5></a>
 							<a href="ittech/security/security.html"><h5>企业安保解决方案</h5></a>
+							<a href="ittech/software/software.html"><h5>企业软件解决方案</h5></a>
 						</div>
 					</div>
 				</div>
