--- a/en/gooverseas_en.html
+++ b/en/gooverseas_en.html
@@ -85,6 +85,7 @@
 						<p>BOI provides high-end consulting services such as strategy, investment, economic and trade docking, channel expansion, etc.
 							for Chinese capital to go overseas, helping enterprises to gain a deep understanding of the local market and business environment,
 							and find the right direction for going overseas.</p>
+						<p>And meanwhile BOI acts as an agent for European business for Chinese companies without Europe branch.</p>
 <!--						<div class="d-flex align-items-center mt-4">-->
 <!--							<p class="mb-0"><a href="gooverseas/gooverseas/go_en.html" class="btn btn-secondary">查看服务详情<span class="ion-ios-arrow-round-forward"></span></a></p>-->
 <!--							<p class="ml-auto mb-0">-->
