--- a/en/ittech_en.html
+++ b/en/ittech_en.html
@@ -92,7 +92,7 @@
 <section class="ftco-section bg-light">
 	<div class="container">
 		<div class = " row wrapper">
-			<div class="col-md-6 col-lg-4 ftco-animate wrapper" style="align-items: center">
+			<div class="col-md-5 col-lg-6 ftco-animate wrapper" style="align-items: center">
 				<div class="blog-entry">
 					<a class="block-20 d-flex align-items-end" style="background-image: url('../ittech/cloud.jpg');" a href="../ittech/cloud/cloud_en.html">
 						<div class="meta-date text-center p-2">
@@ -112,12 +112,11 @@
 			</div>
 
 
-			<div class="col-md-6 col-lg-4 ftco-animate">
+			<div class="col-md-5 col-lg-6 ftco-animate">
 				<div class="blog-entry">
 					<a class="block-20 d-flex align-items-end" style="background-image: url('../ittech/network/1.jpg');" href="../ittech/network/network_en.html" >
 						<div class="meta-date text-center p-2">
 							<span class="day">New</span>
-							<span class="yr">2023</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
@@ -132,12 +131,11 @@
 			</div>
 
 
-			<div class="col-md-6 col-lg-4 ftco-animate">
+			<div class="col-md-5 col-lg-6 ftco-animate">
 				<div class="blog-entry">
 					<a class="block-20 d-flex align-items-end" style="background-image: url('../ittech/security/1.jpg');" href="../ittech/security/security_en.html" >
 						<div class="meta-date text-center p-2">
 							<span class="day">NEW</span>
-							<span class="yr">2023</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
@@ -146,6 +144,24 @@
 							recorders, and storage devices, and serves all industries with IoT perception, artificial intelligence, and big data technologies.</p>
 						<div class="d-flex align-items-center mt-4">
 							<p  class="mb-0"><a href="../ittech/security/security_en.html" class="btn btn-secondary">Read More...<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-5 col-lg-6 ftco-animate">
+				<div class="blog-entry">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('../ittech/software/3.jpg');" href="../ittech/software/software_en.html" >
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="../ittech/software/software_en.html" >Enterprise Software Solution</a></h3>
+						<p>BOI has an experienced software development team and partners with mature products,
+							providing enterprises with customized software development and adaptation of large-scale ERP and CRM systems.</p>
+						<div class="d-flex align-items-center mt-4">
+							<p  class="mb-0"><a href="../ittech/software/software_en.html" class="btn btn-secondary">Read More...<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
 					</div>
 				</div>
