--- a/gooverseas.html
+++ b/gooverseas.html
@@ -78,6 +78,7 @@
 					<div class="text bg-white p-2">
 						<h3 class="heading"><a href="gooverseas/gooverseas/go.html">出海孵化</a></h3>
 						<p>睿泽国际为中资出海提供战略、投资、经贸对接、渠道拓展等高端咨询服务，助力企业深入了解本地市场及营商环境，找准出海方向。</p>
+						<p>同时睿泽国际为尚未出海的中资代理欧洲业务。</p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="gooverseas/gooverseas/go.html" class="btn btn-secondary">查看服务详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
