--- a/gooverseas/gooverseas/ear.html
+++ b/gooverseas/gooverseas/ear.html
@@ -64,54 +64,47 @@
 
 
 
-<section class="ftco-section bg-light">
+<section class="ftco-section">
 	<div class="container">
-		<div id = "rowBlogs" class="row" class = "wrapper">
-
-
-			<div class="col-md-12 col-lg-4 ftco-animate">
-				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('1.jpg');" href="register.html">
-<!--						<div class="meta-date text-center p-2">-->
-<!--							<span class="day">New</span>-->
-<!--							<span class="day">企业业务</span>-->
-<!--						</div>-->
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading" ><a href="register.html">公司注册</a></h3>
-						<p>-提供西班牙本地公司注册流程咨询服务，也可全程代办。</p>
-						<p>-为企业提供西班牙税务、法律高端咨询。</p>
+		<div class="row" class = "wrapper">
+			<div class="col-md-4 col-lg-12 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry ">
+					<h1 class="mb-3 text-center align-content-center ">欧代服务</h1>
+					<h3 class="mb-3 text-center align-content-center ">只需交给我们，效率更快更省心</h3>
+<!--					<div class="meta">-->
+<!--						<div><a><span class="icon-calendar"></span> 28 Feb, 2023</a></div>-->
+<!--					</div>-->
+					<div  class="row wrapper align-items-stretch">
+						<img class = "wrapper" style="width: 100%" src="4.jpg">
 					</div>
+					<h4>欧代是什么？</h4>
+					<h5>欧代的全称是欧盟授权代表，是指由位于欧洲经济区EEA(包括EU与EFTA)境外的制造商明确指定的一个自然人或法人。该自然人或法人可代表EEA境外的制造商履行欧盟相关的指令和法律对该制造商所要求的特定的职责。</h5>
+					<p>欧代通常跟CE认证关联在一起。</p>
+					<p>欧盟CE认证：进入欧盟市场的通行证，欧盟强制性规定，出口到欧盟的医疗器械没有CE无法清关，I类低风险产品出具CE符合性报告，IA，IIA,IIB及III类高风险产品即需要CE证书，并在产品包装上打上CE标识。</p>
+					<p>当欧盟境外出口商的产品在清关中遇到任何问题时，欧代会帮助出口商与海关沟通并解决问题，海关通常也会要求与出口商的欧代进行沟通。当出口商的产品在欧盟地区销售过程中出现任何问题时，也是欧代协助来解决问题。</p>
+					<p>因此，欧代是承担一定风险的，出口商出口的产品风险越高，欧代所承担的风险也越高。 欧盟客户要求境外出口商提供欧代信息，一方面是为了保障产品的质量和出口商的信誉，另一方面是方便后续的沟通。</p>
+
+					<h4>欧代的职责：</h4>
+					<p>1）负责与欧盟范围内各国家的监管机构联系，处理设备投诉、不良事件及召回等工作；</p>
+					<p>2）根据要求，保存技术文件或CE符合性声明，以供主管当局检查；</p>
+					<p>3）受制造商的委托，在欧盟进行产品注册，申请欧盟颁发的自由销售证书；</p>
+					<p>4）提供产品包装、标签和使用说明书等上面需要的欧代标识及其注册地址。</p>
+
+					<h4>如果不指定欧代，会发生什么呢？主要影响有以下几点：</h4>
+					<p>1）公告机构需要先指定EC REP，然后才能颁发CE证书；</p>
+					<p>2）对于投放到欧盟市场的设备，必须在产品包装上标记EC REP；</p>
+					<p>3）如果不指定欧代，则产品可能会被海关扣留。</p>
+
+					<br>
+					<p>总之，欧代就是企业与国外客户联系的纽带，国内外时间差异，产品一旦遇到问题，联系国内需要时间，这个时候就可以联系欧代了，当国外客户不能及时联系国内时，欧代可以帮忙传达，所以，在认证时一定要选择比较有资质，比较好的企业作为自己的欧代。</p>
+
+
 				</div>
 			</div>
-
-
-			<div class="col-md-12 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('2.jpg');" href="ear.html">
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="ear.html">公司业务代理</a></h3>
-						<p>为尚未在西班牙开设分公司的企业代理西班牙业务。</p>
-						<p>为企业跨境销售提供欧代服务。</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-12 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('3.jpg');">
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a>战略、投资、经贸对接咨询</a></h3>
-						<p >针对南部欧洲营商环境，对企业在西业务提供战略、投资、经贸对接等方面高端咨询。</p>
-					</div>
-				</div>
-			</div>
-
 		</div>
 	</div>
-</section>
 
+</section>
 
 
 
