--- a/ittech.html
+++ b/ittech.html
@@ -56,6 +56,7 @@
 					<a href="ittech/cloud/cloud.html" class="btn btn-info px-4 py-3"> 云技术解决方案</a>
 					<a href="ittech/network/network.html" class="btn btn-info px-4 py-3"> 企业网络解决方案</a>
 					<a href="ittech/security/security.html" class="btn btn-info px-4 py-3"> 企业安保解决方案</a>
+					<a href="ittech/software/software.html" class="btn btn-info px-4 py-3"> 企业软件解决方案</a>
 				</p>
 			</div>
 		</div>
@@ -94,7 +95,7 @@
 <section class="ftco-section bg-light">
 	<div class="container">
 		<div class = " row wrapper">
-			<div class="col-md-6 col-lg-4 ftco-animate wrapper" style="align-items: center">
+			<div class="col-md-5 col-lg-6 ftco-animate wrapper" style="align-items: center">
 				<div class="blog-entry">
 					<a href="ittech/cloud/cloud.html" class="block-20 d-flex align-items-end" style="background-image: url('ittech/cloud.jpg');">
 						<div class="meta-date text-center p-2">
@@ -115,7 +116,7 @@
 			</div>
 
 
-			<div class="col-md-6 col-lg-4 ftco-animate">
+			<div class="col-md-5 col-lg-6 ftco-animate">
 				<div class="blog-entry">
 					<a href="ittech/network/network.html" class="block-20 d-flex align-items-end" style="background-image: url('ittech/network/1.jpg');">
 						<div class="meta-date text-center p-2">
@@ -134,12 +135,12 @@
 			</div>
 
 
-			<div class="col-md-6 col-lg-4 ftco-animate">
+			<div class="col-md-5 col-lg-6 ftco-animate">
 				<div class="blog-entry">
 					<a href="ittech/security/security.html" class="block-20 d-flex align-items-end" style="background-image: url('ittech/security/1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">NEW</span>
-							<span class="yr">2023</span>
+							<span class="yr">特别推荐</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
@@ -147,6 +148,24 @@
 						<p>睿泽国际作为海康威视、大华等高级合作伙伴，提供视频监控、记录器、存储设备等安保解决方案，将物联感知、人工智能、大数据技术服务于千行百业。</p>
 						<div class="d-flex align-items-center mt-4">
 							<p  class="mb-0"><a href="ittech/security/security.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-5 col-lg-6 ftco-animate">
+				<div class="blog-entry">
+					<a href="ittech/software/software.html" class="block-20 d-flex align-items-end" style="background-image: url('ittech/software/2.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="yr">特别推荐</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="ittech/software/software.html">企业软件解决方案</a></h3>
+						<p>睿泽国际拥有经验丰富的软件开发团队和产品成熟的合作伙伴，为企业提供量身定制的软件开发和大型ERP、CRM系统的适配。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p  class="mb-0"><a href="ittech/software/software.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
 					</div>
 				</div>
