--- a/ittech/cloud/cloud.html
+++ b/ittech/cloud/cloud.html
@@ -56,6 +56,7 @@
 					<span class="mr-2"><a href="../cloud/cloud.html"> 云技术解决方案<i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../network/network.html"> 企业网络解决方案<i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../security/security.html"> 企业安保解决方案<i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../software/software.html"> 企业软件解决方案<i class="ion-ios-arrow-forward"></i></a></span>
 				</p>
 			</div>
 		</div>
