--- a/ittech/network/network_en.html
+++ b/ittech/network/network_en.html
@@ -55,7 +55,7 @@
 					<span class="mr-2"><a href="../cloud/cloud_en.html"> Cloud Solution<i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../network/network_en.html"> Enterprise Network Solution<i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../security/security_en.html"> Enterprise Security Solution<i class="ion-ios-arrow-forward"></i></a></span>
-
+					<span class="mr-2"><a href="../software/software_en.html"> Enterprise Software Solution<i class="ion-ios-arrow-forward"></i></a></span>
 			</div>
 		</div>
 	</div>
