--- a/ittech/software/software.html
+++ b/ittech/software/software.html
@@ -29,9 +29,9 @@
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item"><a href="../../index.html" class="nav-link">首页</a></li>
 				<li class="nav-item"><a href="../../products.html" class="nav-link">渠道拓展</a></li>
-				<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
+				<li class="nav-item active"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
 
-				<li class="nav-item active"><a href="../../gooverseas.html" class="nav-link">中资落地服务</a></li>
+				<li class="nav-item"><a href="../../gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="../../investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="../../news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="../../about.html" class="nav-link">关于睿泽</a></li>
@@ -43,67 +43,55 @@
 
 
 
-
-
-<section class="hero-wrap hero-wrap-2" style="background-image: url('../../images/bg_10.jpg');">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('../../images/bg_8.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<a href="../../gooverseas.html"><h3 class="mb-2 bread">中资落地服务</h3></a>
-				<h1 class="mb-2 bread">出海孵化</h1>
+				<a href="../../ittech.html"><h3 class="mb-2 bread">企业IT技术</h3></a>
+				<h1 class="mb-2 bread">企业软件解决方案</h1>
 				<p class="breadcrumbs">
-					<span class="mr-2"><a  href="../gooverseas/go.html"> 出海孵化</a><i class="ion-ios-arrow-forward"></i></a></span>
-					<span class="mr-2"><a  href="../hr/hr.html">人才猎聘</a><i class="ion-ios-arrow-forward"></i></a></span>
-					<span class="mr-2"><a  href="../marketing/marketing.html"> 市场营销</a><i class="ion-ios-arrow-forward"></i></a></span>
-					<span class="mr-2"><a href="../admin/admin.html"> 行政服务</a><i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../cloud/cloud.html"> 云技术解决方案<i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../network/network.html"> 企业网络解决方案<i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../security/security.html"> 企业安保解决方案<i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../software/software.html"> 企业软件解决方案<i class="ion-ios-arrow-forward"></i></a></span>
 			</div>
 		</div>
 	</div>
 </section>
-
-
 
 <section class="ftco-section bg-light">
 	<div class="container">
-		<div id = "rowBlogs" class="row" class = "wrapper">
+		<div class="row wrapper">
 
-
-			<div class="col-md-12 col-lg-4 ftco-animate">
+			<div class="col-md-4 col-lg-6 ftco-animate wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('1.jpg');" href="register.html">
-<!--						<div class="meta-date text-center p-2">-->
-<!--							<span class="day">New</span>-->
-<!--							<span class="day">企业业务</span>-->
-<!--						</div>-->
+					<a class="block-25 d-flex align-items-end" style="background-image: url('../../ittech/software/2.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="yr">NEW</span>
+						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading" ><a href="register.html">公司注册</a></h3>
-						<p>-提供西班牙本地公司注册流程咨询服务，也可全程代办。</p>
-						<p>-为企业提供西班牙税务、法律高端咨询。</p>
+						<h3 class="heading"><a >企业软件开发</a></h3>
+						<p>为广大中小型企业定制开发门户网站、电商网站、手机APP、微信小程序、公司管理系统。</p>
+						<p>开发团队由西班牙本地团队和中国团队组成。专业软件工程师与您沟通需求，做好需求分析，根据企业业务情况量身定制最适合的软件系统方案。</p>
+						<p>团队在西班牙耕耘多年，拥有丰富的网站、点菜系统、手机APP开发经验。</p>
 					</div>
 				</div>
 			</div>
 
 
-			<div class="col-md-12 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+			<div class="col-md-4 col-lg-6 ftco-animate wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('2.jpg');" href="ear.html">
+					<a class="block-25 d-flex align-items-end" style="background-image: url('../../ittech/software/1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="yr">NEW</span>
+						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="ear.html">公司业务代理</a></h3>
-						<p>为尚未在西班牙开设分公司的企业代理西班牙业务。</p>
-						<p>为企业跨境销售提供欧代服务。</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-12 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('3.jpg');">
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a>战略、投资、经贸对接咨询</a></h3>
-						<p >针对南部欧洲营商环境，对企业在西业务提供战略、投资、经贸对接等方面高端咨询。</p>
+						<h3 class="heading"><a >ERP/CRM软件适配</a></h3>
+						<p>睿泽国际拥有丰富的软件生态合作伙伴，基于云技术让您的企业快速实现数字化转型。</p>
+						<p>目前可提供公司进销存、客户关系、会计财务、企业文件、项目管理等相关系统，云上部署全球互联，让您一站式实现企业数据云化，提高工作效率轻松数字化转型。</p>
 					</div>
 				</div>
 			</div>
@@ -114,12 +102,14 @@
 
 
 
-
-<section class="ftco-intro" style="background-image: url(../1.jpg);" data-stellar-background-ratio="0.5">
+<section class="ftco-intro" style="background-image: url(../security/iot.jpg);" data-stellar-background-ratio="0.5">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 suscribete_form">
+				<h2>数字企业一站式管理专家</h2>
+				<p>简单 高效 实惠</p>
+				<br>
 				<h2>商业洽谈请扫码联系</h2>
 				<div class="container-wrap">
 					<div class="row no-gutters">
