--- a/ittech/software/software_en.html
+++ b/ittech/software/software_en.html
@@ -21,21 +21,20 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="../../index.html"><img class="logo_img" style="height: 90px; width: auto" src="../../images/logo.png"/></a>
+		<a class="navbar-brand" href="../../en/index.html"><img class="logo_img" style="height: 90px; width: auto" src="../../images/logo.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
 		<div class="collapse navbar-collapse" id="ftco-nav">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a href="../../index.html" class="nav-link">首页</a></li>
-				<li class="nav-item"><a href="../../products.html" class="nav-link">渠道拓展</a></li>
-				<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
-
-				<li class="nav-item active"><a href="../../gooverseas.html" class="nav-link">中资落地服务</a></li>
-				<li class="nav-item"><a href="../../investment.html" class="nav-link">金融保险</a></li>
-				<li class="nav-item"><a href="../../news.html" class="nav-link">公司新闻</a></li>
-				<li class="nav-item"><a href="../../about.html" class="nav-link">关于睿泽</a></li>
-				<li class="nav-item"><a href="../../contact.html" class="nav-link">联系我们</a></li>
+				<li class="nav-item"><a href="../../en/index.html" class="nav-link">Home</a></li>
+				<li class="nav-item"><a href="../../en/products_en.html" class="nav-link">Channel Expansion</a></li>
+				<li class="nav-item active"><a href="../../en/ittech_en.html" class="nav-link">Enterprise IT Solution</a></li>
+				<li class="nav-item"><a href="../../en/gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
+				<li class="nav-item"><a href="../../en/investment_en.html" class="nav-link">Investment & Insurance</a></li>
+				<li class="nav-item"><a href="../../en/news_en.html" class="nav-link">News</a></li>
+				<li class="nav-item"><a href="../../en/about_en.html" class="nav-link">About</a></li>
+				<li class="nav-item"><a href="../../en/contact_en.html" class="nav-link">Contact</a></li>
 			</ul>
 		</div>
 	</div>
@@ -45,65 +44,60 @@
 
 
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('../../images/bg_10.jpg');">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('../../images/bg_8.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<a href="../../gooverseas.html"><h3 class="mb-2 bread">中资落地服务</h3></a>
-				<h1 class="mb-2 bread">出海孵化</h1>
+				<a href="../../en/ittech_en.html"><h3 class="mb-2 bread">Enterprise IT Solution</h3></a>
+				<h1 class="mb-2 bread">Enterprise Security Solution</h1>
 				<p class="breadcrumbs">
-					<span class="mr-2"><a  href="../gooverseas/go.html"> 出海孵化</a><i class="ion-ios-arrow-forward"></i></a></span>
-					<span class="mr-2"><a  href="../hr/hr.html">人才猎聘</a><i class="ion-ios-arrow-forward"></i></a></span>
-					<span class="mr-2"><a  href="../marketing/marketing.html"> 市场营销</a><i class="ion-ios-arrow-forward"></i></a></span>
-					<span class="mr-2"><a href="../admin/admin.html"> 行政服务</a><i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../cloud/cloud_en.html"> Cloud Solution<i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../network/network_en.html"> Enterprise Network Solution<i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../security/security_en.html"> Enterprise Security Solution<i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../software/software_en.html"> Enterprise Software Solution<i class="ion-ios-arrow-forward"></i></a></span>
 			</div>
 		</div>
 	</div>
 </section>
-
 
 
 <section class="ftco-section bg-light">
 	<div class="container">
-		<div id = "rowBlogs" class="row" class = "wrapper">
+		<div class="row wrapper">
 
-
-			<div class="col-md-12 col-lg-4 ftco-animate">
+			<div class="col-md-4 col-lg-6 ftco-animate wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('1.jpg');" href="register.html">
-<!--						<div class="meta-date text-center p-2">-->
-<!--							<span class="day">New</span>-->
-<!--							<span class="day">企业业务</span>-->
-<!--						</div>-->
+					<a class="block-25 d-flex align-items-end" style="background-image: url('../../ittech/software/3.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="yr">NEW</span>
+						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading" ><a href="register.html">公司注册</a></h3>
-						<p>-提供西班牙本地公司注册流程咨询服务，也可全程代办。</p>
-						<p>-为企业提供西班牙税务、法律高端咨询。</p>
+						<h3 class="heading"><a >Enterprise software development</a></h3>
+						<p>Customized and developed portal websites, e-commerce websites, mobile APPs, WeChat applets, and company management systems for small and medium-sized enterprises.</p>
+						<p>The development team consists of a local team and a Chinese team. Professional software engineers will communicate with you about your needs,
+							conduct demand analysis, and tailor the most suitable software system solution according to the company's business conditions.</p>
+						<p>The team has been working in Spain for many years and has rich experience in developing websites, menu and ordering systems, and mobile APPs.</p>
 					</div>
 				</div>
 			</div>
 
 
-			<div class="col-md-12 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+			<div class="col-md-4 col-lg-6 ftco-animate wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('2.jpg');" href="ear.html">
+					<a class="block-25 d-flex align-items-end" style="background-image: url('../../ittech/software/4.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="yr">NEW</span>
+						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="ear.html">公司业务代理</a></h3>
-						<p>为尚未在西班牙开设分公司的企业代理西班牙业务。</p>
-						<p>为企业跨境销售提供欧代服务。</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-12 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('3.jpg');">
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a>战略、投资、经贸对接咨询</a></h3>
-						<p >针对南部欧洲营商环境，对企业在西业务提供战略、投资、经贸对接等方面高端咨询。</p>
+						<h3 class="heading"><a >ERP/CRM Software adaptation</a></h3>
+						<p>BOI has a wealth of software ecosystem partners that enable your company to quickly achieve digital transformation based on cloud technology.</p>
+						<p>Currently, it can provide the company's purchase, sales and inventory, customer relations, accounting and finance, corporate documents,
+							project management and other related systems.
+							Global interconnection is deployed on the cloud, allowing you to realize the cloudification of enterprise data in one stop,
+							improve work efficiency and easily realize digital transformation.</p>
 					</div>
 				</div>
 			</div>
@@ -115,12 +109,16 @@
 
 
 
-<section class="ftco-intro" style="background-image: url(../1.jpg);" data-stellar-background-ratio="0.5">
+
+<section class="ftco-intro" style="background-image: url(../security/iot.jpg);" data-stellar-background-ratio="0.5">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 suscribete_form">
-				<h2>商业洽谈请扫码联系</h2>
+				<h2>All your business on one platform</h2>
+				<p>Simple, efficient, yet affordable!.</p>
+				<br>
+				<h2>Scan QR code to contact for business negotiation</h2>
 				<div class="container-wrap">
 					<div class="row no-gutters">
 
@@ -175,15 +173,23 @@
 				<div class="ftco-footer-widget mb-5">
 					<h2 class="ftco-heading-2">News</h2>
 					<div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(../../products/mobile/smartphone.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(../../news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="../../products/mobile/mobile.html">点击查看最新手机产品</a></h3>
+							<h3 class="heading"><a href="../../news/20230710/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Summit Spain2023</a></h3>
+							<div class="meta">
+								<div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
+								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
+								<!--								<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
+							</div>
 						</div>
 					</div>
 					<div class="block-21 mb-5 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(../../investment/mapfre/mapfre-seguro.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(../../news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="../../investment/mapfre/mapfre_seguro.html">点击查看最新保险产品</a></h3>
+							<h3 class="heading"><a href="../../news/20230711/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Startup Program</a></h3>
+							<div class="meta">
+								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -191,21 +197,18 @@
 
 
 
-
 			<div class="col-md-6 col-lg-3">
 				<div class="ftco-footer-widget mb-5 ml-md-4">
 					<h2 class="ftco-heading-2">Links</h2>
 					<ul class="list-unstyled">
-						<li class="nav-item"><a href="../../index.html" class="nav-link">首页</a></li>
-						<li class="nav-item"><a href="../../products.html" class="nav-link">渠道拓展</a></li>
-						<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
-
-						<li class="nav-item"><a href="../../gooverseas.html" class="nav-link">中资落地服务</a></li>
-						<li class="nav-item"><a href="../../investment.html" class="nav-link">金融保险</a></li>
-						<li class="nav-item"><a href="../../news.html" class="nav-link">公司新闻</a></li>
-						<li class="nav-item"><a href="../../about.html" class="nav-link">关于睿泽</a></li>
-						<li class="nav-item"><a href="../../contact.html" class="nav-link">联系我们</a></li>
-
+						<li class="nav-item"><a href="../../en/index.html" class="nav-link">Home</a></li>
+						<li class="nav-item"><a href="../../en/products_en.html" class="nav-link">Channel Expansion</a></li>
+						<li class="nav-item"><a href="../../en/ittech_en.html" class="nav-link">Enterprise IT Solution</a></li>
+						<li class="nav-item"><a href="../../en/gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
+						<li class="nav-item"><a href="../../en/investment_en.html" class="nav-link">Investment & Insurance</a></li>
+						<li class="nav-item"><a href="../../en/news_en.html" class="nav-link">News</a></li>
+						<li class="nav-item"><a href="../../en/about_en.html" class="nav-link">About</a></li>
+						<li class="nav-item"><a href="../../en/contact_en.html" class="nav-link">Contact</a></li>
 					</ul>
 				</div>
 			</div>
