--- a/en/about_en.html
+++ b/en/about_en.html
@@ -93,6 +93,7 @@
 						<div class="icon mt-2 mr-2 d-flex justify-content-center align-items-center"><span class="flaticon-jigsaw"></span></div>
 						<div class="text">
 							<a href="products_en.html"><h2>Channel Expansion</h2></a>
+							<a ><h5>Alibaba.com</h5></a>
 							<a ><h5>Smartphone</h5></a>
 							<a ><h5>Network Products</h5></a>
 							<a ><h5>Security Products</h5></a>
@@ -115,6 +116,7 @@
 							<a ><h5>Cloud Solution</h5></a>
 							<a ><h5>Enterprise Network Solution</h5></a>
 							<a ><h5>Enterprise Security Solution</h5></a>
+							<a ><h5>Enterprise Software Solution</h5></a>
 <!--							<a href="ittech/cloud/cloud_en.html"><h5>Cloud Solution</h5></a>-->
 <!--							<a href="ittech/network/network_en.html"><h5>Enterprise Network Solution</h5></a>-->
 <!--							<a href="ittech/security/security_en.html"><h5>Enterprise Security Solution</h5></a>-->
